# UGC-Back-End-Python

./: .env  .gitignore  README.md  data.csv  ebay_data.csv  main.py  mysql 配置(1)  pyproject.toml  selemiun.py  test3.py  爬虫.py
app/: main.py
app/api/: content.py
app/config/: selectors.yml  settings.py
app/core/: ai_service.py  base_crawler.py  crawler.py  crawler_factory.py  database.py  site_crawlers.py
app/models/: crawler.py  database.py  schemas.py
app/repositories/: product_repository.py
app/utils/: diagnostic.py  logger.py
scripts/: init_db.sql  run_linux.sh  run_windows.bat  setup.sh  setup_windows.bat  test_db.py  un_windows.ps1
